# GigaDORAM-USENIX23-Artifact

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  benchmark_doram_locally.sh  compile.sh  multi_server_experiments.py  party.sh  run_3_server_experiment.sh  run_doram.sh  run_rep.sh  single_server_experiments.py
circuits/: LowMC_File.txt  LowMC_MAND.txt  LowMC_expanded_key_no_reuse.txt  LowMC_reuse_wires.txt  aes_128_extended.txt  aes_128_extended_debug.txt  cht_lookup.py  cht_lookup.txt  cht_lookup.v  compare_swap.py  compare_swap.txt  dummy_check.py  generate_dummy_checks.sh  generate_replace_if_dummy.sh  lowmc.py  mandify.py  mandify_testcase.txt  repeated_and.py  repeated_and.txt  replace_if_dummy.py  xy_if_xs_equal.py  xy_if_xs_equal.txt
circuits/dummy_check/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  6.txt  7.txt  8.txt  9.txt
circuits/replace_if_dummy/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  (+11 more)
doram/: batcher.h  bit_manip_utils.h  block.h  bristol_fashion_array.h  bristol_fashion_better.h  debug.h  doram_array.h  globals.h  halfgate_gen_prg.h  hash_io.h  local_permutation.h  ohtable_array.h  optimal_cht.h  rep_array_sliced.h  rep_array_unsliced.h  rep_net_io_channel.h  riro_garble.h  sh_obliv_shuffle.h  sh_rep_array.h  sh_riro_garble.h  sh_shuffle_array.h  stupid_level.h  utils.h  zero_sum_prg.h
test/: CMakeLists.txt
test/doram/: doram.cpp
